# nlpbank

./: README.md  softmax.py
kgrep/: Makefile.am  Makefile.in  configure  configure.ac
kgrep/include/: Makefile.am  Makefile.in  auto_config.h.in  color.h  kgrep.h  version.h
kgrep/src/: Makefile.am  Makefile.in  kgrep.c  kgrep.c.in
kgrep/wrapper/: Makefile.am  Makefile.in  kgrep.py  kgrep.py.in  test_kgrep.py.in
